[package]
name = "assert_tokens_eq"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/assert_tokens_eq.git"
homepage = "https://github.com/killercup/assert_tokens_eq"
documentation = "http://docs.rs/assert_tokens_eq"
readme = "README.md"

[dependencies]
