[package]
name = "assert_tokens_eq"
version = "0.2.0"
authors = [
    "Pascal Hertleif <pascal@technocreatives.com>",
    "Dmitrii Demenev <demenev.dmitriy1@gmail.com>",
]
description = "Like Rust's built-in `assert_eq` macro, but for token streams. Passes them through rustfmt, and shows a pretty diff."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/killercup/assert_tokens_eq.git"
homepage = "https://github.com/killercup/assert_tokens_eq"
documentation = "http://docs.rs/assert_tokens_eq"
readme = "README.md"

[dependencies]
snafu = "0.7.4"
ansi_term = "0.12.0"
difference = "2.0.0"

[target.'cfg(windows)'.dependencies]
output_vt100 = "0.1.2"
ctor = "0.2"

[dev-dependencies]
quote = "1.0.29"
